# cardano_tx_sanitizer

./: .gitignore  Cardano Transaction Sanitizer.spec  LICENSE  Makefile  README.md  icon.icns  pyproject.toml
cardano_tx_sanitizer/: __init__.py  gui.py  main.py  transaction_parser.py  utils.py
