[project]
name = "cardano-tx-sanatizer"
version = "0.1.0"
description = "Cardano transaction parser and exporter for Babbage and Conway eras"
authors = [
    { name = "Hareem Adderley", email = "hadderley@kingpinapps.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyside6>=6.7.0",
    "cbor2>=5.6.0",
    "pycardano @ git+https://github.com/Python-Cardano/PyCardano.git@42c9044d8f2b78820dd0e85c5005c5af3fd4ace4",
    "dataclasses-json>=0.6.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "commitizen>=4.8.3",
    "flake8>=7.3.0",
    "pre-commit>=4.2.0",
    "pyinstaller>=6.14.2",
    "pylint>=3.3.7",
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.gui-scripts]
cardano-tx-sanitizer = "cardano_tx_sanitizer:app"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-p no:cacheprovider"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "cardano_tx_sanitizer/__init__.py:__version__",
    "pyproject.toml:version"
]
update_changelog_on_bump = true
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]

[tool.ruff.lint]
ignore = [
    "E501",
    "F841",
]

[tool.uv]
package = true